# aoc-2025

./: .env.example  .gitignore  README.md  pyproject.toml
aoc_template/: __init__.py  base_solution.py  cli.py  description_fetcher.py  input_fetcher.py  utils.py
day1/: description.txt
day1/solution/: day01.py
day1/tests/: test_day01.py
day2/: description.txt
day2/solution/: __init__.py  day02.py
day2/tests/: test_day02.py
day3/: description.txt
day3/solution/: day03.py  input.txt
day3/tests/: test_day03.py
day4/solution/: day04.py
day4/tests/: test_day04.py
day5/solution/: day05.py
day5/tests/: test_day05.py
day6/solution/: day06.py
day6/tests/: test_day06.py
day7/solution/: day07.py
day7/tests/: test_day07.py
